# googletest-verilog

./: CMakeLists.txt  README.md
example/: Counter.test.cpp
include/gtest-verilog/: MatchesTrace.h
include/gtestverilog/: gtestverilog.h
src/: ConsoleColour.cpp  MatchesTrace.cpp  PortDescription.cpp  Step.cpp  Trace.cpp  TraceBuilder.cpp  VerilatorTimestamp.cpp
test/: MatchesTrace.test.cpp  Step.test.cpp  TestBench.test.cpp  Trace.test.cpp  TraceBuilder.test.cpp
tools/: generate_testbench.py
